test_case/rust-lang_rust/54273_421773019_32.rs
compile_fail,E0412\nimpl Something {} // error: type name `Something` is nois emitted is when a value is expected, but\nsomething else is found:\n\n